src/code/nohup.out
Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in load_json
    data = [json.loads(line) for line in file]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in <listcomp>
    data = [json.loads(line) for line in file]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen codecs>", line 322, in decode
UnicodeDecodeError: 'utf-8' codec can't decode byte 0x8b in position 1399: invalid start byte

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 155, in <module>
    fire.Fire(run_inference)
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 135, in Fire
    component_trace = _Fire(component, args, parsed_flag_args, context, name)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 468, in _Fire
    component, remaining_args = _CallAndUpdateTrace(
                                ^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 684, in _CallAndUpdateTrace
    component = fn(*varargs, **kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 117, in run_inference
    data = load_json(os.path.join(input_path, file_name))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 94, in load_json
    for line in tqdm(file.readlines()):
                     ^^^^^^^^^^^^^^^^
  File "<frozen codecs>", line 322, in decode
UnicodeDecodeError: 'utf-8' codec can't decode byte 0x8b in position 1399: invalid start byte
Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in load_json
    data = [json.loads(line) for line in file]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in <listcomp>
    data = [json.loads(line) for line in file]
            ^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/decoder.py", line 353, in raw_decode
    obj, end = self.scan_once(s, idx)
               ^^^^^^^^^^^^^^^^^^^^^^
json.decoder.JSONDecodeError: Expecting ',' delimiter: line 1 column 848 (char 847)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 155, in <module>
    fire.Fire(run_inference)
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 135, in Fire
    component_trace = _Fire(component, args, parsed_flag_args, context, name)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 468, in _Fire
    component, remaining_args = _CallAndUpdateTrace(
                                ^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 684, in _CallAndUpdateTrace
    component = fn(*varargs, **kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 117, in run_inference
    data = load_json(os.path.join(input_path, file_name))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 94, in load_json
    for line in tqdm(file.readlines()):
                     ^^^^^^^^^^^^^^^^
  File "<frozen codecs>", line 322, in decode
UnicodeDecodeError: 'utf-8' codec can't decode byte 0xe5 in position 713: invalid continuation byte
  0%|          | 0/115 [00:00<?, ?it/s] 97%|█████████▋| 111/115 [00:00<00:00, 5034.85it/s]
Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in load_json
    data = [json.loads(line) for line in file]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 90, in <listcomp>
    data = [json.loads(line) for line in file]
            ^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/__init__.py", line 346, in loads
    return _default_decoder.decode(s)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/decoder.py", line 337, in decode
    obj, end = self.raw_decode(s, idx=_w(s, 0).end())
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/json/decoder.py", line 355, in raw_decode
    raise JSONDecodeError("Expecting value", s, err.value) from None
json.decoder.JSONDecodeError: Expecting value: line 1 column 1 (char 0)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 155, in <module>
    fire.Fire(run_inference)
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 135, in Fire
    component_trace = _Fire(component, args, parsed_flag_args, context, name)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 468, in _Fire
    component, remaining_args = _CallAndUpdateTrace(
                                ^^^^^^^^^^^^^^^^^^^^
  File "/root/anaconda3/envs/yx_qwen2_vllm/lib/python3.11/site-packages/fire/core.py", line 684, in _CallAndUpdateTrace
    component = fn(*varargs, **kwargs)
                ^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 117, in run_inference
    data = load_json(os.path.join(input_path, file_name))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/data1/ytw/yx_project/AI4S/src/code/6_analysis.py", line 95, in load_json
    data.append(eval(line))
                ^^^^^^^^^^
  File "<string>", line 1
    ___ $\\mathrm{~cm}$ ( 保留 1 位小数)。( 提示: 单摆被拉开小角度的情 况下, 所求的距离约等于摆球沿圆弧移动的路程。) 某同学想设计一个新单摆, 要求新单 摆摆动 10 个周期的时间与原单摆摆动 11 个周期的时间相等。新单摆的摆长应该取为_______ $\\mathrm{~cm}$", "instruct": "\n###身份###\n\n\t你是一名参加高考的考生，拥有强大的推理和分析能力。\n\n###科目###\n\n物理\n\n###指令###\n\n\t你将对以下题目进行解答，在阅读题目后，你会根据问题判断所属的类型（概念题，分析题，计算题，公式应用题），然后进行作答\n\n###挑战###\n\n如果可以，请尽可能一题多解\n\n### 输出格式###\n\n{\n\n\t\"type\":\"题目所属的类型\",\n\t\"analysis\":[[\"解法一\"],[\"解法二\"],......]],\n\t#写尽可能多的写法，而非我限定的两种解法\n\t#如果解法有多个步骤，按1，2，3，4这样分点分析\n\t#每一个[]对应一种解法\n\t\"answer\":“你的答案”\n\n}\n\n***注意，仅仅按***\\### 输出格式###里的格式输出，不要输出其它内容\n\n", "golden_label": "$6.9 ; 96.8$", "analysis": "【解答】解: 当摆动的角度为 $5^{\\circ}$ 时, 摆球拉离平衡位置的距离最大, 设为 $\\mathrm{s}$, 则根据题 意得 $\\mathrm{s}=\\frac{5 \\pi \\mathrm{L}}{180} \\approx \\frac{5 \\times 3.14 \\times 0.8}{180} \\pi \\approx 6.9 \\mathrm{~cm}$, 故开始时摆球拉离平衡位置的距离应不超过 $6.9 \\mathrm{~cm} ;$单摆的周期公式 $T=2 \\pi \\sqrt{\\frac{\\mathrm{L}}{g}}$, 设原来单摆的周期为 $T$, 新单摆的周期为 $T^{\\prime}$, 根据题意 知 $11 \\mathrm{~T}=10 \\mathrm{~T}^{\\prime}$, 则 $\\frac{\\mathrm{T}^{\\prime}}{\\mathrm{T}}=\\sqrt{\\frac{\\mathrm{L}^{\\prime}}{\\mathrm{L}}}=\\frac{11}{10}$, 则 $\\mathrm{L}^{\\prime}=\\frac{121}{100} \\mathrm{~L}=\\frac{121}{100} \\times 80 \\mathrm{~cm}=96.8 \\mathrm{~cm}$;故答案为: $6.9 ; 96.8$", "modality": "t", "image_urls": [], "inference": "```json\n{\n\t\"type\": \"分析题\",\n\t\"analysis\": [\n\t\t[\n\t\t\t\"解法一：利用单摆的周期性求解。\",\n\t\t\t\"单摆的周期 T 可以用公式 T = 2π√(L/g) 来计算，其中 L 是摆长，g 是重力加速度。根据题目，原单摆的摆长是 80 cm，要求的最大角度小于 5°，在这个情况下，重力加速度 g 可以近似为 9.8 m/s²（标准重力加速度），而摆球沿圆弧移动的路程 s 约等于摆球沿直线移动的路程，即 s = Lθ，其中 θ 是摆球与垂直方向的夹角。因此，新单摆的摆长 L' 应满足：10T = 11T，即 10 * 2π√(80/L') = 11 * 2π√(80/80)，解得 L' = 87.2 cm。\"\n\t\t],\n\t\t[\n\t\t\t\"解法二：利用单摆的摆长与角度的关系求解。\",\n\t\t \"根据单摆的摆长与摆动角度的关系，当摆动角度很小时，摆长 L 近似等于摆球沿圆弧移动的路程 s，即 L ≈ s = Lθ。由于最大角度小于 5°，我们可以将 θ 近似为 5°，从而得到 L' ≈ 80 * cos(5°) ≈ 79.6 cm。这个值比 87.2 cm 要小一些，说明新单摆的摆长应该小于 87.2 cm。但考虑到题目要求保留一位小数，并且需要找到新单摆的摆长，所以选择更大的 L' 值，即 87.2 cm，作为答案。\"\n\t\t]\n\t],\n\t\"answer\": \"87.2 cm\"\n}\n```"}
        ^
SyntaxError: invalid syntax
所有任务已完成！
